# Memory-scanner-for-injected-DLLs-and-shellcode-detection-C

./: README.md
MemoryScannerX/: CMakeLists.txt  README.md
MemoryScannerX/include/memory/: msx_memory.h
MemoryScannerX/include/process/: msx_process.h
MemoryScannerX/include/report/: msx_report.h
MemoryScannerX/include/scanner/: msx_modules.h  msx_scan_engine.h  msx_scoring.h  msx_shellcode.h
MemoryScannerX/include/utils/: msx_common.h  msx_entropy.h  msx_log.h  msx_sha256.h
MemoryScannerX/src/cli/: main.c
MemoryScannerX/src/memory/: msx_memory.c
MemoryScannerX/src/process/: msx_process.c
MemoryScannerX/src/report/: msx_report.c
MemoryScannerX/src/scanner/: msx_modules.c  msx_scan_engine.c  msx_scoring.c  msx_shellcode.c
MemoryScannerX/src/utils/: msx_common.c  msx_entropy.c  msx_log.c  msx_sha256.c
MemoryScannerX/tests/: CMakeLists.txt  test_main.c
